--- a/package.json
+++ b/package.json
@@ -40,12 +40,17 @@
     "sass": "^1.70.0",
     "vite": "^5.1.0"
   },
+  "husky":{
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*.jsx": [
+    "*.jsx": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ],
-    "**/*.js": [
+    "*.js": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
