--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API=http://209.38.228.54:81/
-VITE_API_AUTO_LIST=http://209.38.228.54:81/ru/api/auto/
+VITE_API=http://34.159.206.220
+VITE_API_AUTO_LIST=http://34.159.206.220/api/auto/
