--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API=http://34.159.206.220
 VITE_API_AUTO_LIST=http://34.159.206.220/api/auto/
+VITE_API_AUTO_INFO=http://34.159.206.220/api/auto/
