--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API=http://34.159.206.220
-VITE_API_AUTO_LIST=http://34.159.206.220/api/auto/
-VITE_API_AUTO_INFO=http://34.159.206.220/api/auto/
+VITE_API=https://impex-back.pp.ua
+VITE_API_AUTO_LIST=https://impex-back.pp.ua/api/auto/
+VITE_API_AUTO_INFO=https://impex-back.pp.ua/api/auto/
