--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API=https://impex-back.pp.ua/
-VITE_API_AUTO_LIST=https://impex-back.pp.ua/api/auto/
+VITE_API_AUTO_LIST=https://impex-ack.pp.ua/api/auto/
 VITE_API_AUTO_INFO=https://impex-back.pp.ua/api/auto/
